[tool.poetry]
name = "ac03-automação"
version = "0.1.0"
description = ""
authors = ["AkimGomes <ak-gomes@hotmail.com>"]
readme = "README.md"
packages = [{include = "ac03_automação"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
